--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,53 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+        <%= link_to "Book Review", root_path, class: "navbar-brand"%>
+        </div> 
+
+        <ul class="nav navbar-nav">
+          <li> <%= link_to "Sign up", new_user_registration_path %></li>
+
+          <% if user_signed_in? %>
+            <li> <%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li> <%= link_to "Log in", new_user_session_path%> </li>
+
+          <% end %>
+
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+
+            <li class="dropdown">
+              <a>
+                Categories:
+              </a>
+             
+            </li>
+            <% Category.all.each do |category| %>
+              <li class="<% 'active' if params[:category] == category.name %>"><%= link_to category.name, books_path(category: category.name), class: "link" %></li>
+            <% end %>  
+
+          <% if user_signed_in? %>
+            <li> <%= link_to "Add book", new_book_path %> </li>
+          <% end %>
+        
+        </ul>
+
+      </div>
+    
+    </nav>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
